--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,15 @@ body {
   width: 100%;
   overflow-x: hidden;
 }
+.banner-intro {
+  color: #000000;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 25px;
+  width: 100%;
+  overflow-x: hidden;
+}
 .h1,
 .h2,
 .h3,
@@ -134,7 +143,7 @@ p:last-child {
 }
 a:active,
 a:hover {
-  color: #f6599e;
+  color: #004aad;
 }
 li {
   list-style: none;
@@ -165,7 +174,7 @@ section {
   padding-top: 7.5rem;
 }
 ::selection {
-  background-color: #f6599e;
+  background-color: #004aad;
   color: #ffffff;
 }
 
@@ -268,12 +277,12 @@ section {
 /* Yellow button */
 .btn.btn-yellow {
   background: transparent;
-  border-color: #f6599e;
-  color: #f6599e;
+  border-color: #004aad;
+  color: #004aad;
 }
 .btn.btn-yellow:hover {
-  background: #f6599e !important;
-  border-color: #f6599e;
+  background: #004aad !important;
+  border-color: #004aad;
   color: #202020 !important;
 }
 /* Transparent button */
@@ -283,8 +292,8 @@ section {
   color: #ffffff;
 }
 .btn.btn-trans:hover {
-  background: #f6599e !important;
-  border-color: #f6599e;
+  background: #004aad !important;
+  border-color: #004aad;
   color: #ffffff !important;
 }
 
@@ -309,18 +318,18 @@ section {
 
 /* Text color */
 .text-yellow {
-  color: #f6599e;
+  color: #004aad;
 }
 .text-grey {
   color: #a6a6a6;
 }
 .text-white {
-  color: #ffffff;
+  color: #000000;
 }
 
 /* Background color */
 .bg-yellow {
-  background: #f6599e;
+  background: #004aad;
 }
 .bg-black {
   background: #000000;
@@ -339,7 +348,7 @@ section {
 /*Social Icon Hover Bg Hover */
 .social-icon:hover {
   color: #202020 !important;
-  background: #f6599e !important;
+  background: #004aad !important;
   -webkit-transition: 0.3s ease-in-out;
   -o-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
@@ -372,7 +381,7 @@ header a.logo img {
 }
 
 .other-page .navbar-top-default {
-  background-color: #f6599e;
+  background-color: #004aad;
 }
 
 .header-appear .navbar-top-default {
@@ -393,7 +402,7 @@ header a.logo img {
 
 /*change nav color on sticky nav*/
 .header-appear .navbar-simple .navbar-nav .nav-link {
-  color: #ffffff;
+  color: #000000;
 }
 
 .navbar-nav {
@@ -408,7 +417,7 @@ header a.logo img {
 
 .navbar-simple .navbar-nav .nav-link {
   font-size: 16px;
-  color: #ffffff;
+  color: #000000;
   font-weight: 400;
   text-align: center;
   padding: 0.5rem 2rem;
@@ -420,12 +429,12 @@ header a.logo img {
 }
 
 .header-appear .nav-box-round .navbar-nav .nav-link.active {
-  background-color: #f6599e;
+  background-color: #004aad;
   color: #ffffff !important;
 }
 
 .header-appear .nav-box-round .navbar-nav .nav-link:hover {
-  color: #f6599e;
+  color: #004aad;
 }
 
 /*nav line*/
@@ -447,7 +456,7 @@ header a.logo img {
 .line.active:after {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  border-color: #f6599e;
+  border-color: #004aad;
   -webkit-transition: width 350ms ease-in-out;
   transition: width 350ms ease-in-out;
   width: 100%;
@@ -611,7 +620,7 @@ header a.logo img {
 }
 
 .sidemenu_btn:hover span {
-  background: #f6599e;
+  background: #004aad;
 }
 
 .sidemenu_btn:hover span:first-child,
@@ -722,7 +731,7 @@ header a.logo img {
 .side-nav .navbar-nav .nav-link::after {
   content: "";
   position: absolute;
-  background: #f6599e;
+  background: #004aad;
   display: inline-block;
   width: 0;
   height: 4px;
@@ -759,7 +768,7 @@ header a.logo img {
 .social-icons-simple li a {
   font-size: 16px;
   justify-content: center;
-  color: #ffffff;
+  color: #000000;
   height: 40px;
   line-height: 38px;
   width: 40px;
@@ -823,7 +832,7 @@ header a.logo img {
 }
 
 .header-appear .navigation-toggle:hover span {
-  background-color: #f6599e;
+  background-color: #004aad;
 }
 
 .sidebar_btn {
@@ -836,7 +845,7 @@ header a.logo img {
 
 #pp-nav li .active span,
 .pp-slidesNav .active span {
-  background-color: #f6599e;
+  background-color: #004aad;
 }
 
 #pp-nav span,
@@ -886,8 +895,8 @@ header a.logo img {
 }
 
 .slider-text {
-  background-color: #ffffff;
-  color: #2b3033;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 .slider-area {
@@ -901,12 +910,12 @@ header a.logo img {
 }
 
 .slider-area .slider-content .heading {
-  color: #ffffff;
+  color: #000000;
   font-size: 52px;
   font-weight: 700;
 }
 .slider-area .slider-content .text {
-  color: #ffffff;
+  color: #000000;
   margin-top: 30px;
 }
 
@@ -1064,437 +1073,6 @@ header a.logo img {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   font-weight: 500;
-}
-
-/* ===================================
-   TIMELINE
-====================================== */
-
-.timeline-bg {
-  background-image: url("../images/timeline.jpg");
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.sub-content {
-  padding-top: 3.5rem;
-}
-
-.main-content h2 {
-  font-size: 30px;
-  font-weight: normal;
-}
-
-.sub-content h5 {
-  font-size: 18px;
-  font-weight: normal;
-}
-
-.sub-content p {
-  font-size: 14px;
-  font-weight: normal;
-}
-
-.cd-horizontal-timeline ol,
-.cd-horizontal-timeline ul {
-  list-style: none;
-}
-.cd-timeline-navigation a:hover {
-  border-color: #f6599e;
-}
-.cd-horizontal-timeline a,
-.cd-horizontal-timeline a:hover,
-.cd-horizontal-timeline a:focus {
-  color: #ffffff;
-}
-
-.cd-horizontal-timeline blockquote,
-.cd-horizontal-timeline q {
-  quotes: none;
-}
-.cd-horizontal-timeline blockquote:before,
-.cd-horizontal-timeline blockquote:after,
-.cd-horizontal-timeline q:before,
-.cd-horizontal-timeline q:after {
-  content: "";
-  content: none;
-}
-.cd-horizontal-timeline table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-.cd-horizontal-timeline {
-  opacity: 0;
-  -webkit-transition: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  transition: opacity 0.2s;
-}
-.cd-horizontal-timeline::before {
-  /* never visible - this is used in jQuery to check the current MQ */
-  content: "mobile";
-  display: none;
-}
-.cd-horizontal-timeline.loaded {
-  /* show the timeline after events position has been set (using JavaScript) */
-  opacity: 1;
-}
-.cd-horizontal-timeline .timeline {
-  position: relative;
-  height: 100px;
-  width: 100%;
-  margin: 0 auto;
-}
-.cd-horizontal-timeline .events-wrapper {
-  position: relative;
-  height: 100%;
-  margin: 0 40px;
-  overflow: hidden;
-}
-.cd-horizontal-timeline .events-wrapper::after,
-.cd-horizontal-timeline .events-wrapper::before {
-  /* these are used to create a shadow effect at the sides of the timeline */
-  content: "";
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  height: 100%;
-  width: 20px;
-}
-.cd-horizontal-timeline .events-wrapper::before {
-  left: 0;
-}
-.cd-horizontal-timeline .events-wrapper::after {
-  right: 0;
-}
-.cd-horizontal-timeline .events {
-  /* this is the white line/timeline */
-  position: absolute;
-  z-index: 1;
-  left: 0;
-  top: 50px;
-  height: 2px;
-  /* width will be set using JavaScript */
-  background: #3c4142;
-  -webkit-transition: -webkit-transform 0.4s;
-  -moz-transition: -moz-transform 0.4s;
-  transition: transform 0.4s;
-}
-.cd-horizontal-timeline .filling-line {
-  /* this is used to create the yellow line filling the timeline */
-  position: absolute;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: #f6599e;
-  -webkit-transform: scaleX(0);
-  -moz-transform: scaleX(0);
-  -ms-transform: scaleX(0);
-  -o-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -ms-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center;
-  -webkit-transition: -webkit-transform 0.3s;
-  -moz-transition: -moz-transform 0.3s;
-  transition: transform 0.3s;
-}
-.cd-horizontal-timeline .events a {
-  position: absolute;
-  bottom: 0;
-  z-index: 2;
-  text-align: center;
-  font-size: 1rem;
-  padding-bottom: 15px;
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  transform: translateZ(0);
-}
-.cd-horizontal-timeline .events a::after {
-  /* this is used to create the event spot */
-  content: "";
-  position: absolute;
-  left: 50%;
-  right: auto;
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-  transform: translateX(-50%);
-  bottom: -5px;
-  height: 12px;
-  width: 12px;
-  border-radius: 50%;
-  border: 2px solid #dfdfdf;
-  background-color: #f8f8f8;
-  -webkit-transition: background-color 0.3s, border-color 0.3s;
-  -moz-transition: background-color 0.3s, border-color 0.3s;
-  transition: background-color 0.3s, border-color 0.3s;
-}
-.no-touch .cd-horizontal-timeline .events a:hover::after {
-  background-color: #313740;
-  border-color: #313740;
-}
-.cd-horizontal-timeline .events a.selected {
-  pointer-events: none;
-}
-.cd-horizontal-timeline .events a.selected::after {
-  background-color: #f6599e;
-  border-color: #f6599e;
-}
-.cd-horizontal-timeline .events a.older-event::after {
-  border-color: #f6599e;
-  background-color: #f6599e;
-}
-@media only screen and (min-width: 1100px) {
-  .cd-horizontal-timeline::before {
-    /* never visible - this is used in jQuery to check the current MQ */
-    content: "desktop";
-  }
-}
-
-.cd-timeline-navigation a {
-  /* these are the left/right arrows to navigate the timeline */
-  position: absolute;
-  z-index: 1;
-  top: 50%;
-  bottom: auto;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  height: 34px;
-  width: 34px;
-  border-radius: 50%;
-  border: 2px solid #3c4142;
-  /* replace text with an icon */
-  overflow: hidden;
-  color: transparent;
-  text-indent: 100%;
-  white-space: nowrap;
-  -webkit-transition: border-color 0.3s;
-  -moz-transition: border-color 0.3s;
-  transition: border-color 0.3s;
-}
-.cd-timeline-navigation a::after {
-  content: "";
-  position: absolute;
-  height: 16px;
-  width: 16px;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  -ms-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-  background: url(../images/cd-arrow.svg) no-repeat 0 0;
-}
-.cd-timeline-navigation a.prev {
-  left: 0;
-  -webkit-transform: translateY(-50%) rotate(180deg);
-  -moz-transform: translateY(-50%) rotate(180deg);
-  -ms-transform: translateY(-50%) rotate(180deg);
-  -o-transform: translateY(-50%) rotate(180deg);
-  transform: translateY(-50%) rotate(180deg);
-}
-.cd-timeline-navigation a.next {
-  right: 0;
-}
-.no-touch .cd-timeline-navigation a:hover {
-  border-color: #f6599e;
-}
-.cd-timeline-navigation a.inactive {
-  cursor: not-allowed;
-}
-.cd-timeline-navigation a.inactive::after {
-  background-position: 0 -16px;
-}
-.no-touch .cd-timeline-navigation a.inactive:hover {
-  border-color: #dfdfdf;
-}
-
-.cd-horizontal-timeline .events-content {
-  position: relative;
-  width: 100%;
-  height: auto;
-  margin: 2em 0;
-  overflow: hidden;
-  -webkit-transition: height 0.4s;
-  -moz-transition: height 0.4s;
-  transition: height 0.4s;
-}
-.cd-horizontal-timeline .events-content li {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  left: 0;
-  top: 0;
-  -webkit-transform: translateX(-100%);
-  -moz-transform: translateX(-100%);
-  -ms-transform: translateX(-100%);
-  -o-transform: translateX(-100%);
-  transform: translateX(-100%);
-  opacity: 0;
-  -webkit-animation-duration: 0.4s;
-  -moz-animation-duration: 0.4s;
-  animation-duration: 0.4s;
-  -webkit-animation-timing-function: ease-in-out;
-  -moz-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-}
-.cd-horizontal-timeline .events-content li.selected {
-  /* visible event content */
-  position: relative;
-  z-index: 2;
-  opacity: 1;
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
-}
-.cd-horizontal-timeline .events-content li.enter-right,
-.cd-horizontal-timeline .events-content li.leave-right {
-  -webkit-animation-name: cd-enter-right;
-  -moz-animation-name: cd-enter-right;
-  animation-name: cd-enter-right;
-}
-.cd-horizontal-timeline .events-content li.enter-left,
-.cd-horizontal-timeline .events-content li.leave-left {
-  -webkit-animation-name: cd-enter-left;
-  -moz-animation-name: cd-enter-left;
-  animation-name: cd-enter-left;
-}
-.cd-horizontal-timeline .events-content li.leave-right,
-.cd-horizontal-timeline .events-content li.leave-left {
-  -webkit-animation-direction: reverse;
-  -moz-animation-direction: reverse;
-  animation-direction: reverse;
-}
-.cd-horizontal-timeline .events-content li > * {
-  margin: 0 auto;
-}
-
-.cd-horizontal-timeline .events-content em::before {
-  content: "- ";
-}
-
-@media only screen and (min-width: 768px) {
-  .cd-horizontal-timeline .events-content em {
-    font-size: 1rem;
-  }
-}
-
-@media only screen and (max-width: 767px) {
-  .cd-horizontal-timeline.loaded {
-    margin: 0;
-  }
-  .cd-horizontal-timeline .timeline {
-    width: 100%;
-  }
-  .cd-horizontal-timeline ol,
-  .cd-horizontal-timeline ul {
-    padding: 0;
-    margin: 0;
-  }
-  .cd-horizontal-timeline .events-content h4 {
-    font-size: 16px;
-  }
-  .cd-horizontal-timeline .events-content {
-    margin: 0;
-  }
-}
-
-@-webkit-keyframes cd-enter-right {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0%);
-  }
-}
-@-moz-keyframes cd-enter-right {
-  0% {
-    opacity: 0;
-    -moz-transform: translateX(100%);
-  }
-  100% {
-    opacity: 1;
-    -moz-transform: translateX(0%);
-  }
-}
-@keyframes cd-enter-right {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(100%);
-    -moz-transform: translateX(100%);
-    -ms-transform: translateX(100%);
-    -o-transform: translateX(100%);
-    transform: translateX(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0%);
-    -moz-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    -o-transform: translateX(0%);
-    transform: translateX(0%);
-  }
-}
-@-webkit-keyframes cd-enter-left {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0%);
-  }
-}
-@-moz-keyframes cd-enter-left {
-  0% {
-    opacity: 0;
-    -moz-transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    -moz-transform: translateX(0%);
-  }
-}
-@keyframes cd-enter-left {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-100%);
-    -moz-transform: translateX(-100%);
-    -ms-transform: translateX(-100%);
-    -o-transform: translateX(-100%);
-    transform: translateX(-100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateX(0%);
-    -moz-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    -o-transform: translateX(0%);
-    transform: translateX(0%);
-  }
-}
-.timeline:before {
-  content: " ";
-  display: none;
-  bottom: 0;
-  left: 0;
-  width: 0;
-  margin-left: -1.5px;
-  background-color: #eeeeee;
 }
 
 /* ===================================
@@ -1678,8 +1256,8 @@ header a.logo img {
 
 .circle:hover,
 .circle:hover i {
-  color: #f6599e;
-  border-color: #f6599e;
+  color: #004aad;
+  border-color: #004aad;
 }
 
 #team-circle-right {
@@ -2034,7 +1612,7 @@ header a.logo img {
   /* Side Nav */
   .side-nav .navbar-nav .nav-link {
     display: inline-table;
-    color: #ffffff;
+    color: #000000;
     padding: 40px 0 3px 0 !important;
   }
   .sidebar_btn {
